--- a/build.gradle
+++ b/build.gradle
@@ -5,10 +5,9 @@ plugins {
     id 'jacoco'
 
     id 'nebula.project' version '3.4.0'
-    id 'io.spring.dependency-management' version '1.0.3.RELEASE'
 
     // Versioning Plugins
-    id 'nebula.release' version '6.0.1'
+    id 'nebula.release' version '6.0.2'
 
     // Quality / Documentation Plugins
     id 'org.sonarqube' version '2.5'
@@ -26,12 +25,6 @@ repositories {
     jcenter()
 }
 
-dependencyManagement {
-    imports {
-        mavenBom 'io.spring.platform:platform-bom:Brussels-SR4'
-    }
-}
-
 dependencies {
     compileOnly(
             [group: 'org.projectlombok', name: 'lombok', version: '1.16.18'],
@@ -39,13 +32,12 @@ dependencies {
 
     compile(
             [group: 'org.apache.commons', name: 'commons-text', version: '1.1'],
-            [group: 'org.slf4j', name: 'slf4j-api'],
+            [group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'],
     )
 
     testCompile(
-            [group: 'org.projectlombok', name: 'lombok'],
-            [group: 'org.codehaus.groovy', name: 'groovy-all'],
-            [group: 'org.spockframework', name: 'spock-core'],
+            [group: 'org.codehaus.groovy', name: 'groovy-all', version: '2.4.12'],
+            [group: 'org.spockframework', name: 'spock-core', version: '1.1-groovy-2.4'],
     )
 }
 
