Replace ValueConverter by joda-convert

--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,7 @@ dependencies {
 
     api(
             [group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'],
+            [group: 'org.joda', name: 'joda-convert', version: '1.9.2'],
     )
 
     implementation(
