--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ before_script:
 script: "./gradle/buildViaTravis.sh"
 
 after_success:
-  - bash <(curl -s https://codecov.io/bash)
+  - ./gradlew jacocoTestReport coveralls
 
 notifications:
   webhooks:
