--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ plugins {
     // Versioning Plugins
     id 'nebula.release' version '6.0.2'
 
+    id 'com.github.kt3k.coveralls' version '2.8.1'
     id 'com.jfrog.bintray' version '1.7.3'
 }
 
@@ -56,8 +57,6 @@ jacocoTestReport {
         html.enabled = true
     }
 }
-
-check.finalizedBy jacocoTestReport
 
 bintray {
     user = System.getenv('BINTRAY_USER')
