--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,7 @@ dependencies {
     )
 
     implementation(
-        [group: 'org.apache.commons', name: 'commons-text', version: '1.1'],
+        [group: 'org.apache.commons', name: 'commons-lang3', version: '3.5'],
     )
 
     testCompile(
