--- a/build.gradle
+++ b/build.gradle
@@ -36,10 +36,15 @@ dependencies {
     implementation(
         // 3.5 is the latest version that supports Java 6.
         [group: 'org.apache.commons', name: 'commons-lang3', version: '3.5'],
+        [group: 'org.yaml', name: 'snakeyaml', version: '1.19'],
     )
 
     testCompile(
         [group: 'org.spockframework', name: 'spock-core', version: '1.1-groovy-2.4'],
+    )
+
+    testRuntime(
+        [group: 'ch.qos.logback', name: 'logback-classic', version: '1.1.11'],
     )
 }
 
