Made 'time' and 'level' property labels configurable

--- a/src/test/resources/slog4j.yml
+++ b/src/test/resources/slog4j.yml
@@ -1,2 +1,8 @@
+labels:
+  time: t
+  level: l
+  eventId: evt
+  spanId: spanId
+
 converters:
   org.slog4j.SLoggerSpec$Person: org.slog4j.SLoggerSpec$PersonConverter
