--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   ci-build:
     runs-on: ubuntu-latest
+    environment: env1
     steps:
       - uses: actions/checkout@v3
         with:
