Restore support to Java 8

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,5 +1,6 @@
 ---
 name: Release
+
 on:
   release:
     types:
@@ -16,8 +17,8 @@ jobs:
       - name: Set up JDK
         uses: actions/setup-java@v3
         with:
-          distribution: 'temurin'
-          java-version: 11
+          distribution: 'zulu'
+          java-version: 8
           cache: 'gradle'
       - name: Set artifact version
         run: |
