--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,10 @@
 ---
-name: CI
+name: Build
+
 on:
   workflow_dispatch:
   push:
-    branches-ignore:
-      - master
+
 jobs:
   ci-build:
     runs-on: ubuntu-latest
@@ -16,8 +16,8 @@ jobs:
       - name: Set up JDK
         uses: actions/setup-java@v3
         with:
-          distribution: 'temurin'
-          java-version: 11
+          distribution: 'zulu'
+          java-version: 8
           cache: 'gradle'
       - name: clean build
         run: ./gradlew clean build --no-daemon --info --stacktrace
